<resources>
    <string name="app_name">My Application</string>
    <string name="btnhomework">宿題1</string>
    <string name="btnlinearlayout">LinearLayout</string>
    <string name="Search_msg1">検索</string>

    <!-- LinearLayoutActivity -->
    <string name="linear_layout_label">LINEAR LAYOUT</string>
    <!-- ConstraintLayoutActivity -->
    <string name="Constraint_layout_label">宿題</string>
    <string name="constraint_button_send">SEND</string>
    <string name="constraint_textviiew_msg">テキストを入力</string>
    <string name="send_radio_pc">PC</string>
    <string name="send_radio_android">PHONE</string>
    <string name="intent">Intent</string>
    <string name="title_activity_intent">IntentActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="Hwintent">宿題Intent</string>
    <string name="line">Line</string>
    <string name="template_email">Template Email</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="txt_mail_send_address">送り先</string>
    <string name="txt_mail_text">内容</string>
    <string name="txt_email_title">表題</string>
    <string name="msg_update">更新</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>