<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HwIntentActivity">

    <Button
        android:id="@+id/btnLineAct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnEmailsend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/template_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etxtemailcontent" />

    <Button
        android:id="@+id/btncamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/camera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEmailsend" />

    <ImageView
        android:id="@+id/imgphotocap"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btncamera"
        app:srcCompat="@android:drawable/ic_menu_report_image" />

    <Button
        android:id="@+id/btnGallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gallery"
        app:layout_constraintBottom_toBottomOf="@+id/btncamera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btncamera" />

    <EditText
        android:id="@+id/etxtemailaddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtmailAdd"
        app:layout_constraintTop_toTopOf="@+id/txtmailAdd" />

    <TextView
        android:id="@+id/txtmailAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:textSize="20dp"
        android:text="@string/txt_mail_send_address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLineAct" />

    <TextView
        android:id="@+id/txtmailtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_mail_text"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="@+id/txtemailtitle"
        app:layout_constraintTop_toBottomOf="@+id/etxtemailtitle" />

    <EditText
        android:id="@+id/etxtemailcontent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/txtmailtext"
        app:layout_constraintTop_toTopOf="@+id/txtmailtext" />

    <TextView
        android:id="@+id/txtemailtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_email_title"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="@+id/txtmailAdd"
        app:layout_constraintTop_toBottomOf="@+id/etxtemailaddress" />

    <EditText
        android:id="@+id/etxtemailtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toEndOf="@+id/txtemailtitle"
        app:layout_constraintTop_toTopOf="@+id/txtemailtitle" />

</androidx.constraintlayout.widget.ConstraintLayout>