<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/btnHomework"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnhomework"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp" />

    <Button
        android:id="@+id/btnLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/linear_layout_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnHomework"
        android:layout_marginTop="30dp" />

    <Button
        android:id="@+id/btnSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Spinner"
        app:layout_constraintTop_toBottomOf="@id/btnLinearLayout"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="@id/btnLinearLayout"
        app:layout_constraintRight_toRightOf="@id/btnLinearLayout" />

    <Button
        android:id="@+id/btnIntent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/intent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSpinner" />

    <Button
        android:id="@+id/btnhwintent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Hwintent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnIntent" />

    <Button
        android:id="@+id/btnRoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Room"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnhwintent" />


</androidx.constraintlayout.widget.ConstraintLayout>