<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Constraint_Activity">

    <ListView
        android:id="@+id/ListViewSendInfo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/spinnersend"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    </ListView>

    <Spinner
        android:id="@+id/spinnersend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/sendRadioGroup"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:ignore="Labelfor"
        android:ems="10"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnSend"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnSend"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/constraint_button_send"
        app:layout_constraintBottom_toBottomOf="@+id/editTextMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextMessage" />

    <RadioGroup
        android:id="@+id/sendRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/editTextMessage"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/rbtnSendPC"
            android:layout_width="wrap_content"
            android:drawableStart="@drawable/ic_baseline_computer_24"
            android:layout_height="wrap_content"
            android:text="@string/send_radio_pc" />

        <RadioButton
            android:id="@+id/rbtnSendAndroid"
            android:drawableStart="@drawable/ic_baseline_phone_android_24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_radio_android" />
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>